--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^11.1.2",
     "@angular/router": "^11.1.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "angular-svg-round-progressbar": "^5.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.8.0",
